--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -9,34 +9,41 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# Introduction\n",
-    "Programming languages are often classified by the programming paradigm they mainly support. The features of each programming language often encourage, or even mandate, structuring the various parts of a program in a specific way. While Python is often referred to as an object-oriented language, it is probably best described as a multi-paradigm programming language as its features also many other programming paradigms. A paradigm can be described as a specific approach to solve a problem through programming.\n",
     "\n",
-    "The main difference between the various paradigms is the way they handle the state of the program, i.e. the values of its variables. Controlling how and where state is transformed in a program has practical implications for how reliable and manageable the code becomes. Each programming pradigm offers a different way of managing state, in the hope that the program does not quickly fall into the trap of \"spaghetti code\", where the code is so badly structured that it becomes too complex to maintain.\n",
+    "Just like many other programming languages out there, Python's functionality builds on so-called `programming paradigms`. While some languages may require you to use a certain paradigm, others allow for more than one paradigm in your code.\n",
     "\n",
-    "As an example, three programming paradigms are: \n",
-    "1. [Procedural](###Procedural)\n",
-    "2. [Functional](#functional_comparison)\n",
+    "Python is mostly referred to as an `object-oriented` programming language, implying that only `Object-Oriented Programming (OOP)` - one of many paradigms - is allowed in it. However, the language supports and encourages the use of other paradigms too. Users can mix and match the paradigms in a way that suits the problem at hand and matches their programming style. This feature grants the user a lot of flexibility and is probably one reason why Python has become so popular. It would, therefore, be more accurate to speak of Python as a multi-paradigm programming language instead of a purely object-oriented one.\n",
+    "\n",
+    "In the following sections, we will first provide you with a brief overview of the main paradigms in Python. Then, by building Tesla's Model X step by step, we will be illustrating the differences between the paradigms and show that, in theory, each of them would do the trick.    \n",
+    "\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Overview of Programming Paradigms \n",
+    "\n",
+    "Now, what exactly are programming paradigms? Roughly speaking, a paradigm is a way of solving a problem. Each paradigm offers a different perspective on the task at hand. They follow a paradigm-specific approach, structure your code and control when and how it is executed.     \n",
+    "\n",
+    "The three main paradigms that are supported by Python are:  \n",
+    "1. [Procedural](###Procedural)  \n",
+    "2. [Functional](#functional_comparison)  \n",
     "3. [Object-Oriented](#oop_comparison)\n",
     "\n",
-    "The following subsections will illustrate the differences between these three programming paradigms by producing the same output using code organised in these three different ways."
+    "They differ mainly in when and how the program assigns values to variables. Controlling this is important because it directly affects the manageability and reliability of the code. Long, repetitive or copy-paste codes are more prone to mistakes, difficult to read and hard to maintain. Programming paradigms assist you in writing well-structured code so that it remains comprehensible and concise.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Overview of Programming Paradigms\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Procedural"
+    "### Procedural\n",
+    "\n"
    ]
   },
   {
@@ -489,25 +496,25 @@
    "metadata": {},
    "source": [
     "#### Object Oriented\n",
-    "A class does not actually contain any data. A method called .__init__() specifies that different parameters are necessary to define a certain car, but it does not contain the actual values for these parameters for any specific car. Every time a new car object is created, init() sets the initial state of the object by assigning the values of the object’s properties. That is, init() initializes each new instance of the class.\n",
+    "A class does not actually contain any data. A method called `__init__()` specifies that different parameters are necessary to define a certain car, but it does not contain the actual values for these parameters for any specific car. Every time a new car object is created, `__init()__` sets the initial state of the object by assigning the values of the object’s properties. That is, `__init()__` initializes each new instance of the class.\n",
     "\n",
-    "You can create as many attributes in the init() method as you like, but the first parameter will always be a variable called self. When a new class instance is created, the instance is automatically passed to the self parameter in init() so that new attributes can be defined for the object. Note in the code below, the init() function is indented by four spaces and the body of the method by eight spaces. This exact indentation is important to Python, as it indicates that the init() method belongs to the Car class.\n",
+    "You can create as many attributes in the `__init()__` method as you like, but the first parameter will always be a variable called self. When a new class instance is created, the instance is automatically passed to the self parameter in `__init()__` so that new attributes can be defined for the object. Note in the code below, the `__init()__` function is indented by four spaces and the body of the method by eight spaces. This exact indentation is important to Python, as it indicates that the `__init()__` method belongs to the Car class.\n",
     "\n",
-    "In the body of init(), there are four statements - one for each attribute - using the self variable:\n",
+    "In the body of `__init()__`, there are four statements - one for each attribute - using the self variable:\n",
     "\n",
     "1. __self.colors = colors__ creates an attribute called colors and assigns to it the value of the colors parameter.\n",
     "2. __self.hp = hp__ creates an attribute called hp and assigns to it the value of the hp parameter.\n",
     "3. __self.length = length__ creates an attribute called length and assigns to it the value of the length parameter.\n",
     "4. __self.width = width__ creates an attribute called width and assigns to it the value of the width parameter.\n",
     "\n",
-    "As mentioned above, all attributes created in the init() method are specific to the instances and hence referred to as instance attributes. In other words, all car objects have a length, width, etc. but the values for these parameters vary depending on the Car instance. \n",
+    "As mentioned above, all attributes created in the `__init()__` method are specific to the instances and hence referred to as instance attributes. In other words, all car objects have a length, width, etc. but the values for these parameters vary depending on the Car instance. \n",
     "\n",
-    "In order to create attributes that all objects inherit, so called class attributes, a value can be assigned to a variable name outside the init() function. Exemplary, all Cars of our class are models by Tesla."
+    "In order to create attributes that all objects inherit, so called class attributes, a value can be assigned to a variable name outside the `__init()__` function. Exemplary, all Cars of our class are models by Tesla."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -719,7 +726,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.0-final"
   }
  },
  "nbformat": 4,
