--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "Python is mostly referred to as an `object-oriented` programming language, implying that only `Object-Oriented Programming (OOP)` - one of many paradigms - is allowed in it. However, the language supports and encourages the use of other paradigms too. Users can mix and match the paradigms in a way that suits the problem at hand and matches their programming style. This feature grants the user a lot of flexibility and is probably one reason why Python has become so popular. It would, therefore, be more accurate to speak of Python as a multi-paradigm programming language instead of a purely object-oriented one.\n",
     "\n",
-    "In the following sections, we will first provide you with a brief overview of the main paradigms in Python. Then, by building Tesla's Model X step by step, we will be illustrating the differences between the paradigms and show that, in theory, each of them would do the trick.    \n",
+    "In the following sections, we will first provide you with a brief overview of the main paradigms in Python. Then, by building Tesla's Model X step by step, we will be illustrating the differences between the paradigms and show that each of them would do the trick.    \n",
     "\n"
    ],
    "cell_type": "markdown",
@@ -28,14 +28,14 @@
    "source": [
     "## Overview of Programming Paradigms \n",
     "\n",
-    "Now, what exactly are programming paradigms? Roughly speaking, a paradigm is a way of solving a problem. Each paradigm offers a different perspective on the task at hand. They follow a paradigm-specific approach, structure your code and control when and how it is executed.     \n",
+    "Now, what exactly are programming paradigms? Roughly speaking, a paradigm is a way of solving a problem. Each paradigm offers a different set of ideas to perform the task at hand. They follow a paradigm-specific approach, structure your code and control its execution.     \n",
     "\n",
     "The three main paradigms that are supported by Python are:  \n",
     "1. [Procedural](###Procedural)  \n",
     "2. [Functional](#functional_comparison)  \n",
     "3. [Object-Oriented](#oop_comparison)\n",
     "\n",
-    "They differ mainly in when and how the program assigns values to variables. Controlling this is important because it directly affects the manageability and reliability of the code. Long, repetitive or copy-paste codes are more prone to mistakes, difficult to read and hard to maintain. Programming paradigms assist you in writing well-structured code so that it remains comprehensible and concise.\n"
+    "They differ mainly in when and how the program assigns values to variables. Controlling this is important because it directly affects the manageability and reliability of the code. Chaotic, repetitive or copy-paste codes are more prone to mistakes, difficult to read and hard to maintain. Programming paradigms assist you in writing well-structured code so that it remains comprehensible and concise.\n"
    ]
   },
   {
@@ -43,14 +43,23 @@
    "metadata": {},
    "source": [
     "### Procedural\n",
-    "\n"
+    "\n",
+    "The `procedural paradigm` might be the most intuitive of the three. It uses a top-down approach, where it breaks the problem down into small pieces and instructs the machine step by step how to solve a task. The value of a variable is changed directly along the way, which makes the code very easy to follow and understand. For the machine it is like following a recipe. \n",
+    "  \n",
+    "However, the longer and more complex a code, the more difficult it gets to stay on top of things. For example, a programmer would always have to know which variable names he already used because accidentally assigning a value to an existing variable may cause problems down the line. Finally, reusing a program that follows the procedural paradigm is often not that easy and requires you to code up every step again.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Functional"
+    "### Functional\n",
+    "\n",
+    "While the procedural paradigm follows a step by step approach, the `functional paradigm` solves a task by executing a series of functions. In this case, the value of a variable is changed by applying a function to it. The definition of the function happens separately from its use and is done in a general way, such that we can use it again with different inputs. This procedure might be a little more time consuming at first, but it has the advantage that later on, we can use the function for similar tasks without having to code every instruction again. \n",
+    "\n",
+    "This makes the code a lot shorter. However, one will have to look up the function definition to understand what it does and how it changes the state of the variable. Additionally, when working with imported functions there is always the possibility of unwanted changes to their functionality. If the package creators decide to change said function, this will affect your program too.\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -101,17 +110,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The name of the model under construction is: Model X\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model_name = \"Model X\"\n",
     "\n",
@@ -128,18 +129,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The name of the model under construction is: Model X\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# since car is not defined, the execution of this code causes an error\n",
     "def specify_model(model_name):\n",
     "    print(\"The name of the model under construction is: {}\".format(model_name))\n",
     "    return car\n",
@@ -159,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,17 +200,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The name of the model under construction is: Model X\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "modelX = Car(\"Model X\")"
    ]
@@ -239,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,21 +241,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The Model X has the following specifications:\n",
-      "Available colours: ['red', 'white', 'black']\n",
-      "HP: 120\n",
-      "Length: 3\n",
-      "Width: 1.5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Laura's try\n",
     "# Having a look at the Model X first\n",
@@ -290,21 +264,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The Model S has the following specifications:\n",
-      "Available colours: ['yellow', 'black']\n",
-      "HP: 150\n",
-      "Length: 2.5\n",
-      "Width: 1.25\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# If I now want to have a look at Tesla's Model S I have to specify all the variables again\n",
     "modelS_name = \"Model S\"\n",
@@ -347,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,21 +341,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The Model X has the following specifications:\n",
-      "Available colours: ['red', 'white', 'black']\n",
-      "HP: 120\n",
-      "Length: 3\n",
-      "Width: 1.5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Now we can use it with the Model X specifications\n",
     "modelX_specs = car_specs(name=\"Model X\", \n",
@@ -405,41 +355,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Model X', ['red', 'white', 'black'], 120, 3, 1.5]"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "modelX_specs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The Model S has the following specifications:\n",
-      "Available colours: ['yellow', 'black']\n",
-      "HP: 150\n",
-      "Length: 2.5\n",
-      "Width: 1.25\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# And we can also easily use it with the Model S specifications\n",
     "modelS_specs = car_specs(name=\"Model S\",\n",
@@ -451,42 +378,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Model S', ['yellow', 'black'], 150, 2.5, 1.25]"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "modelS_specs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Model S', ['yellow', 'black'], 150, 2.5, 1.25]"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "modelS_specs"
    ]
@@ -514,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,18 +458,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model X is a car by Tesla.\n",
-      "Model X has a length of 3m and a width of 1.5m.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#instantiate the Car class with the Model X object\n",
     "Model_X = Car(['red', 'white', 'black'],120,3,1.5)\n",
@@ -592,17 +488,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model X is driving\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Creating the Construction Plan\n",
     "car = 'Model X'\n",
@@ -626,17 +514,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model X is driving.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Creating the Construction Plan\n",
     "car = 'Model X'\n",
@@ -665,17 +545,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model X is driving.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Car:\n",
     "    # Creating the Construction Plan\n",
@@ -710,6 +582,25 @@
     "- Inheritance\n",
     "- Showing the advantage of OOP (reuising code parts)"
    ]
+  },
+  {
+   "source": [
+    "### Sources\n",
+    "\n",
+    "**Overview of Programming Paradigms**  \n",
+    "\n",
+    "https://blog.newrelic.com/engineering/python-programming-styles/  \n",
+    "https://hackr.io/blog/procedural-programming   \n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
