OOP-first draft

--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -44,7 +44,7 @@
    "source": [
     "### Procedural\n",
     "\n",
-    "The `procedural paradigm` might be the most intuitive of the three. It uses a top-down approach, where it breaks the problem down into small pieces and instructs the machine step by step how to solve a task. The value of a variable is changed directly along the way, which makes the code very easy to follow and understand. For the machine it is like following a recipe. \n",
+    "The `procedural` paradigm might be the most intuitive of the three. It uses a top-down approach, where it breaks the problem down into small pieces and instructs the machine step by step how to solve a task. The state of a variable is changed directly along the way, which makes the code very easy to follow and understand. For the machine it is like following a recipe. \n",
     "  \n",
     "However, the longer and more complex a code, the more difficult it gets to stay on top of things. For example, a programmer would always have to know which variable names he already used because accidentally assigning a value to an existing variable may cause problems down the line. Finally, reusing a program that follows the procedural paradigm is often not that easy and requires you to code up every step again.\n"
    ]
@@ -55,9 +55,9 @@
    "source": [
     "### Functional\n",
     "\n",
-    "While the procedural paradigm follows a step by step approach, the `functional paradigm` solves a task by executing a series of functions. In this case, the value of a variable is changed by applying a function to it. The definition of the function happens separately from its use and is done in a general way, such that we can use it again with different inputs. This procedure might be a little more time consuming at first, but it has the advantage that later on, we can use the function for similar tasks without having to code every instruction again. \n",
+    "While the procedural paradigm follows a step by step approach, the `functional` paradigm solves a task by executing a series of functions. In this case, the state of a variable is changed by applying a function to it. The definition of the function happens strictly seperate from its use and is done in a general way, such that we can use it again with different inputs. This procedure might be a little more time consuming at first, but it has the advantage that later on, we can use the function for similar tasks without having to code every instruction again. \n",
     "\n",
-    "This makes the code a lot shorter. However, one will have to look up the function definition to understand what it does and how it changes the state of the variable. Additionally, when working with imported functions there is always the possibility of unwanted changes to their functionality. If the package creators decide to change said function, this will affect your program too.\n",
+    "This reusability makes the code a lot shorter. However, one will have to look up the function definition to understand what it does and how it changes the state of the variable. Additionally, when working with imported functions there is always the possibility of unwanted changes to their functionality. If the package creators decide to change said function, this will affect your program too.\n",
     "\n",
     "\n"
    ]
@@ -66,7 +66,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Object Oriented"
+    "### Object Oriented\n",
+    "\n",
+    "The `object-oriented` programming paradigm is built on the notion of classes and objects. These objects are similar to real life objects and all objects of the same class share certain attributes (states) or methods (functionalities). However, each object can also have personal attributes, just like one jacket might be red and the other one might be green, they both have the ability to keep you warm though.\n",
+    "\n",
+    "As you see, with OOP state and function are no longer separated but happen both within the object. The problem at hand is then solved through the interaction between the different objects. For example, if you, as a human object, are cold you could put on the jacket object to solve that problem. The fact, that OOP basically mimicks the real world, makes it easier to understand and since these objects are whole in themselves, they can easily be used in different applications. \n",
+    "\n"
    ]
   },
   {
